--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
     "firebase": "^3.0.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "font-awesome": "~4.5.0",
+    "semantic-ui": "^2.2.4"
   }
 }
