--- a/package.json
+++ b/package.json
@@ -37,9 +37,14 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.5.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "2.2.0",
+    "ember-light-table": "1.5.0",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-responsive": "2.0.0",
     "emberfire": "2.0.4",
-    "loader.js": "^4.0.1"
+    "font-awesome": "4.7.0",
+    "loader.js": "^4.0.1",
+    "semantic-ui-ember": "2.0.0-beta.0"
   }
 }
